# refle

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  LICENSING.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  turbo.json
.claude/: launch.json
deploy/: docker-compose.yml
docs/: development.md  phase-4-agentic-ai.md  phase-5-readiness-monitoring-people.md  phase-6-admin-and-editions.md  self-hosted-core-setup.md
libs/ai_core/: pyproject.toml
libs/ai_core/refle_ai_core/: __init__.py  config.py  embeddings.py  gateway.py
libs/ai_core/refle_ai_core/agents/: __init__.py  base.py  draft_policy.py  posture_summary.py  ssp_narrative.py
libs/ai_core/refle_ai_core/providers/: __init__.py  base.py  gemini.py  openai_compatible.py
libs/core/: pyproject.toml
libs/core/refle_core/: __init__.py  ai_runs.py  audit.py  config.py  crypto.py  db.py  posture.py  security.py
libs/core/refle_core/models/: __init__.py  access_request.py  ai_run.py  audit.py  base.py  compliance.py  embedding.py  evidence.py  integration.py  invitation.py  notification.py  organization.py  people.py  policy.py  user.py
libs/extensions/: pyproject.toml
libs/extensions/refle_extensions/: __init__.py  auth.py  licensing.py  registry.py
libs/integrations/: pyproject.toml
libs/integrations/refle_integrations/: __init__.py  base.py  engine.py
libs/integrations/refle_integrations/connectors/: __init__.py  aws.py  demo.py  github.py  okta.py
scripts/: test_demo_sync.py  test_resend.py  test_worker_sync.py  trigger_test_email.py
services/api/: alembic.ini  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_pgvector.py  1517efc52ed6_add_evidence_and_policies.py  15265e830082_phase_5b_posture_snapshots_and_.py  3e01e4c4640c_add_connections_and_results.py  6d0add2b6668_add_embeddings.py  77143f58f3ca_add_invitations.py  81fea56d4013_phase_4_models.py  847f4e0eebf9_phase_5c_people_access_reviews_training.py  b4538924eeda_tier1_audit_log_and_control_scoping.py  b7939c2c7df1_initial_schema.py  bb92411c81dd_templates.py  d8d3e93019b3_add_access_requests.py  e4c9a07d6f32_sans_crf_policy_templates.py
services/api/refle_api/: __init__.py  cookies.py  deps.py  main.py  notify.py  rag.py  readiness.py  schemas.py  seed.py  services.py  storage.py
services/api/refle_api/routers/: access_reviews.py  ai.py  audit.py  auth.py  controls.py  evidence.py  health.py  integrations.py  meta.py  notifications.py  people.py  policies.py  reports.py  setup.py  templates.py
services/worker/: pyproject.toml
services/worker/refle_worker/: __init__.py  celery_app.py
tests/: conftest.py  test_ai.py  test_ai_gateway.py  test_api.py  test_auth_flow.py  test_connectors_phase5.py  test_phase4.py  (+7 more)
(+21 files in other folders)
