[project]
name = "refle-ai-core"
version = "0.0.0"
description = "Provider-agnostic LLM gateway (Gemini default; OpenAI / local for sovereign mode)."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refle_ai_core"]
