[project]
name = "refle-core"
version = "0.0.0"
description = "refle core: settings, async database, and the compliance domain model."
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pgvector>=0.3",
  "argon2-cffi>=23.1",
  "pyjwt>=2.8",
  "cryptography>=42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refle_core"]
