[project]
name = "refle-extensions"
version = "0.0.0"
description = "Open-core extension seams: registries and the license/feature interface."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refle_extensions"]
