[project]
name = "refle-integrations"
version = "0.0.0"
description = "Connector framework and built-in connectors (AWS, GitHub, Okta)."
requires-python = ">=3.12"
dependencies = [
  "refle-extensions",
  "refle-core",
  "boto3>=1.34",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refle_integrations"]
