[project]
name = "refle-api"
version = "0.0.0"
description = "refle HTTP API (FastAPI). Source of truth for the OpenAPI contract."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "alembic>=1.13",
  "refle-core",
  "refle-extensions",
  "refle-integrations",
  "refle-ai-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refle_api"]
