[project]
name = "refle-worker"
version = "0.0.0"
description = "Background workers: scheduled connector scans, control tests, agent runs."
requires-python = ">=3.12"
dependencies = [
  "celery>=5.4",
  "redis>=5.0",
  "refle-core",
  "refle-integrations",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["refle_worker"]
